--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ h2{
 </div>
     
     <div class="image">
-     <img src="/image/illustration-intro.svg" alt="">
+     <img src="image/illustration-intro.svg" alt="">
     </div>
 
   </div> 
@@ -457,19 +457,19 @@ h2{
   <h2>What they've said</h2>
   <div class="testimonial-grid">
     <div class="testimonial">
-      <img src="/image/avatar-anisha.png" alt="Anisha Li">
+      <img src="image/avatar-anisha.png" alt="Anisha Li">
       <h4>Anisha Li</h4>
       <p>"Manager has supercharged our team's workflow. The maintain visibility on larger milestones at all times keeps everyone motivated."</p>
     </div>
 
     <div class="testimonial">
-      <img src="/image/avatar-ali.png" alt="Ali Bravo">
+      <img src="image/avatar-ali.png" alt="Ali Bravo">
       <h4>Ali Bravo</h4>
       <p>"We have been able to cancel so many other subscriptions since using Manage. There is no more cross-channel confusion and everyone is much more focused."</p>
     </div>
 
     <div class="testimonial">
-      <img src="/image/avatar-richard.png" alt="Richard Watts">
+      <img src="image/avatar-richard.png" alt="Richard Watts">
       <h4>Richard Watts</h4>
       <p>"Manage allows us to provide structure and product keeps us organised and focused. i can't stop recording them to everyone i talk to"</p>
     </div>
